--- a/src/app/admin/berths/berths-add-edit/berths-add-edit.component.html
+++ b/src/app/admin/berths/berths-add-edit/berths-add-edit.component.html
@@ -1,4 +1,4 @@
-﻿<edit-container [headerTitle]="id ? 'Edit berth' : 'Add berth'">
+﻿<edit-container [headerTitle]="id ? 'Edit Berth' : 'Add Berth'">
     <app-loader
         *ngIf="isLoading$ | async"
         [isContainer]="true"
