--- a/src/app/admin/berths/berths-list/berths-list.component.html
+++ b/src/app/admin/berths/berths-list/berths-list.component.html
@@ -38,7 +38,7 @@
     <material-panel-table
         [showSearchbar]="false"
         [showHeader]="true"
-        tableTitle="Berths list"
+        tableTitle="Berths List"
     >
         <div table class="w-full shadow-lg">
             <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
@@ -56,7 +56,7 @@
                             <section
                                 class="flex flex-col justify-center gap-4"
                             >
-                                <div mat-sort-header="name">Berth name</div>
+                                <div mat-sort-header="name">Berth Name</div>
                                 <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
