--- a/src/app/admin/companies/companies-list/companies-list.component.html
+++ b/src/app/admin/companies/companies-list/companies-list.component.html
@@ -10,7 +10,7 @@
                 class="bg-primary text-white  py-2 min-h-[35px] min-md:min-w-[120px] max-sm:w-full rounded-l max-lg:w-full"
                 type="button"
             >
-                Add company
+                Add Company
             </button>
             <button
                 [disabled]="(isLoading$ | async) || false"
@@ -40,7 +40,7 @@
     <material-panel-table
         [showSearchbar]="false"
         [showHeader]="true"
-        tableTitle="Companies list"
+        tableTitle="Companies List"
     >
         <div table class="w-full shadow-lg">
             <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
@@ -56,7 +56,7 @@
                     <ng-container cdkColumnDef="name">
                         <th cdk-header-cell *cdkHeaderCellDef scope="col" class="max-w-40">
                             <section class="flex flex-col gap-4">
-                                <div mat-sort-header="name">Company name</div>
+                                <div mat-sort-header="name">Company Name</div>
                                 <searchbar >
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input
