--- a/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
+++ b/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
@@ -91,78 +91,26 @@
                 <div>&nbsp;</div>
             </div>
             <div>
-                <h5 class="font-bold mb-3">Address</h5>
-                <div class="min-xl:columns-3">
-                    <div class="h-[90px]">
-                        <h6 class="font-bold">Street</h6>
-                        <div
-                            iconic-input-wrapper
-                            leftIcon="location-crosshairs"
-                        >
-                            <input
-                                inputRef
-                                type="text"
-                                id="addrStreet"
-                                formControlName="addrStreet"
-                            />
+                <h6 class="font-bold">Address</h6>
+                <div class="min-xl:columns-4">
+                    <div>
+                        <div iconic-input-wrapper>
+                            <input placeholder="City" inputRef type="text" formControlName="addrCity">
                         </div>
                     </div>
-                    <div class="h-[90px]">
-                        <div class="min-md:flex gap-2">
-                            <div class="flex-2">
-                                <h6 class="font-bold">No.</h6>
-                                <div iconic-input-wrapper>
-                                    <input
-                                        inputRef
-                                        type="text"
-                                        formControlName="addrStreetNo"
-                                    />
-                                </div>
-                            </div>
-                            <div class="flex-1">
-                                <h6 class="font-bold">City</h6>
-                                <div iconic-input-wrapper>
-                                    <input
-                                        inputRef
-                                        type="text"
-                                        formControlName="addrCity"
-                                    />
-                                </div>
-                            </div>
-                            <div class="flex-1">
-                                <h6 class="font-bold">County</h6>
-                                <div iconic-input-wrapper>
-                                    <input
-                                        inputRef
-                                        type="text"
-                                        formControlName="addrCounty"
-                                    />
-                                </div>
-                            </div>
+                    <div>
+                        <div iconic-input-wrapper>
+                            <input placeholder="County" inputRef type="text" formControlName="addrCounty">
                         </div>
                     </div>
-                    <div class="h-[90px]">
-                        <div class="min-md:flex gap-2">
-                            <div class="flex-1">
-                                <h6 class="font-bold">Country</h6>
-                                <div iconic-input-wrapper>
-                                    <input
-                                        inputRef
-                                        type="text"
-                                        formControlName="addrCountry"
-                                    />
-                                </div>
-                            </div>
-                            <div class="flex-1">
-                                <h6 class="font-bold">Zip Code</h6>
-                                <div iconic-input-wrapper>
-                                    <input
-                                        inputRef
-                                        type="text"
-                                        formControlName="addrZipCode"
-                                    />
-                                </div>
-                            </div>
+                    <div>
+                        <div iconic-input-wrapper>
+                            <input placeholder="Country" inputRef type="text" formControlName="addrCountry">
+                        </div>
+                    </div>
+                    <div>
+                        <div iconic-input-wrapper>
+                            <input placeholder="Zip Code" inputRef type="text" formControlName="addrZipCode">
                         </div>
                     </div>
                 </div>
@@ -244,7 +192,7 @@
                     </button>
                 </div>
             </div>
-            <div>
+            <!-- <div>
                 <h6 class="font-bold">Zone</h6>
                 <div class="mt-10">
                     <table class="table border border-lightgray">
@@ -278,7 +226,6 @@
                                     />
                                 </td>
                                 <td>
-                                    <!-- <fa-icon  icon="pen" class="text-primary cursor-pointer"></fa-icon> -->
                                     <fa-icon
                                         icon="trash"
                                         (click)="removeZone(i)"
@@ -296,7 +243,7 @@
                         <fa-icon icon="circle-plus"></fa-icon> Add New zone
                     </button>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="flex justify-center pt-5">
