--- a/src/app/admin/ports/ports-list/ports-list.component.html
+++ b/src/app/admin/ports/ports-list/ports-list.component.html
@@ -21,7 +21,7 @@
         </mat-button-toggle-group>
     </div>
     <!--    buttonLabel="Add Location" tableTitle="Locations" (buttonClicked)="redirectAddLocation()"-->
-    <material-panel-table [showSearchbar]="false" [showHeader]="true" tableTitle="Ports list">
+    <material-panel-table [showSearchbar]="false" [showHeader]="true" tableTitle="Ports List">
         <div table class="w-full shadow-lg">
             <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
                 <table class="material-table no-wrap overflow-hidden" matSort (matSortChange)="sortData($event)"
@@ -34,7 +34,7 @@
                     <ng-container cdkColumnDef="name">
                         <th cdk-header-cell *cdkHeaderCellDef scope="col" class="max-w-40">
                             <section class="flex flex-col gap-4">
-                                <div mat-sort-header="name">Port name</div>
+                                <div mat-sort-header="name">Port Name</div>
                                 <searchbar>
                                     <fa-icon leftIcon icon="search"></fa-icon>
                                     <input #searchName input type="text" (keyup)="
