--- a/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
+++ b/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
@@ -32,6 +32,7 @@
                     <mat-checkbox formControlName="isTypeShipOwner">Ship owner</mat-checkbox>
                     <mat-checkbox formControlName="isTypeAgentCompany">Agent company</mat-checkbox>
                     <mat-checkbox formControlName="isTypeManeuveringCompany">Maneuvering company</mat-checkbox>
+                    <mat-checkbox formControlName="isTypePortOperator">Port Operator</mat-checkbox>
                 </div>
 
             </div>
@@ -175,6 +176,7 @@
                             <tr>
                                 <th>First Name</th>
                                 <th>Last Name</th>
+                                <th>Region Code</th>
                                 <th>Phone Number</th>
                                 <!-- <th>Client</th>
                                 <th>Product</th> -->
@@ -201,6 +203,13 @@
                                         class="text-center"
                                         matInput
                                         formControlName="lastName"
+                                    />
+                                </td>
+                                <td>
+                                    <input
+                                        matInput
+                                        class="text-center"
+                                        formControlName="phoneRegionCode"
                                     />
                                 </td>
                                 <td>
